disable double click on a selected seat to update seat couter

--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
                     <!-- calculation part start -->
                     <div class="bg-[#F7F8F8] p-8 rounded-3xl mb-6">
                         <div class="flex justify-between pb-4 border-b border-dashed border-[#03071233]">
-                            <h2>Seat <span id="selected-seat-counter">0</span></h2>
+                            <h2 class="font-inter text-base font-medium">Seat <span id="selected-seat-counter" class="text-xs font-bold bg-[#1DD100] text-white py-1 px-2 rounded-xl">0</span></h2>
                             <h2>Class</h2>
                             <h2>Price</h2>
                         </div>
