make append child function

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                     <div class="col-span-1">
-                        <img src="images/info-devider.png" alt="info-devider">
+                        <img src="images/info-devider.png" alt="info-divider">
                     </div>
                     <!-- info right -->
                     <div class="col-span-3 flex flex-col items-center justify-center">
@@ -344,8 +344,9 @@
                             <h2>Class</h2>
                             <h2>Price</h2>
                         </div>
-                        <div class="flex justify-between py-4 border-b border-[#03071233]">
+                        <div id="selected-seat-list" class="flex justify-between py-4 border-b border-[#03071233]">
                             <!-- append seat list -->
+                            
                         </div>
                         <div class="flex justify-between py-4">
                             <h2>Total Price</h2>
