appended the seat list

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                             <h2>Class</h2>
                             <h2>Price</h2>
                         </div>
-                        <div id="selected-seat-list" class="flex justify-between py-4 border-b border-[#03071233]">
+                        <div id="selected-seat-list" class="py-4 border-b border-[#03071233]">
                             <!-- append seat list -->
                             
                         </div>
