added total and grand total calculation

--- a/index.html
+++ b/index.html
@@ -346,7 +346,8 @@
                         </div>
                         <div id="selected-seat-list" class="py-4 border-b border-[#03071233]">
                             <!-- append seat list -->
-                            
+                            <!-- append seat list -->
+                            <!-- append seat list -->
                         </div>
                         <div class="flex justify-between py-4">
                             <h2>Total Price</h2>
