--- a/index.html
+++ b/index.html
@@ -340,7 +340,8 @@
                     <!-- calculation part start -->
                     <div class="bg-[#F7F8F8] p-8 rounded-3xl mb-6">
                         <div class="flex justify-between pb-4 border-b border-dashed border-[#03071233]">
-                            <h2 class="font-inter text-base font-medium">Seat <span id="selected-seat-counter" class="text-xs font-bold bg-[#1DD100] text-white py-1 px-2 rounded-xl">0</span></h2>
+                            <h2 class="font-inter text-base font-medium">Seat <span id="selected-seat-counter"
+                                    class="text-xs font-bold bg-[#1DD100] text-white py-1 px-2 rounded-xl">0</span></h2>
                             <h2>Class</h2>
                             <h2>Price</h2>
                         </div>
@@ -354,8 +355,7 @@
                             <p>BDT <span id="total-price">0</span></p>
                         </div>
                         <div class="mb-6">
-                            <input id="input-field"
-                                class="text-sm pl-5 rounded-l-3xl py-5 px-1 w-2/3" type="text"
+                            <input id="input-field" class="text-sm pl-5 rounded-l-3xl py-5 px-1 w-2/3" type="text"
                                 placeholder="Have any coupon?">
                             <button id="apply-btn"
                                 class="btn text-white text-sm bg-[#1DD100] rounded-r-3xl rounded-l-none -ml-2 w-1/3 btn-lg">Apply</button>
@@ -370,23 +370,42 @@
                     <!-- passenger form start -->
                     <div>
                         <h3 class="pb-4 text-base font-semibold text-[#030712]">Passenger Name*</h3>
-                        <input class="mb-6 border border-[#0307121A] py-5 px-6 w-full rounded-3xl text-[#03071266]" type="text" placeholder="Enter your name">
+                        <input class="mb-6 border border-[#0307121A] py-5 px-6 w-full rounded-3xl text-[#03071266]"
+                            type="text" placeholder="Enter your name">
 
                         <h3 class="pb-4 text-base font-semibold text-[#030712]">Phone Number*</h3>
-                        <input class="mb-6 border border-[#0307121A] py-5 px-6 w-full rounded-3xl text-[#03071266]" type="text" placeholder="Enter your phone number">
+                        <input class="mb-6 border border-[#0307121A] py-5 px-6 w-full rounded-3xl text-[#03071266]"
+                            type="text" placeholder="Enter your phone number">
 
                         <h3 class="pb-4  text-base font-semibold text-[#030712]">Email ID</h3>
-                        <input class="mb-6 border border-[#0307121A] py-5 px-6 w-full rounded-3xl text-[#03071266]" type="text" placeholder="Enter your email id">
-                        
-                        <button id="banner-btn"
-                            class="btn bg-[#1DD100] border-[#1DD100] font-bold text-xl text-white w-full btn-lg">
-                            Buy Tickets
+                        <input class="mb-6 border border-[#0307121A] py-5 px-6 w-full rounded-3xl text-[#03071266]"
+                            type="text" placeholder="Enter your email id">
+
+                        <!-- Open the modal using ID.showModal() method -->
+                        <button class="btn bg-[#1DD100] border-[#1DD100] font-bold text-xl text-white w-full btn-lg"
+                            onclick="my_modal_1.showModal()">
+                            Next
                         </button>
+                        <dialog id="my_modal_1" class="modal">
+                            <div class="modal-box w-11/12 max-w-5xl text-center py-14 px-20">
+                                <img class="mx-auto" src="images/success.png" alt="success-image">
+                                <h3 class="font-bold text-2xl font-roboto py-9 text-[#27AE60]">SUCCESS!</h3>
+                                <p class="text-[#4A4A4A] font-roboto text-xl font-medium">Thank you for Booking Our Bus Seats. We are working hard to find the best service and deals for you. </p>
+                                <p class="text-[#4A4A4A] font-roboto text-xl font-light mb-5">Shortly you will find a confirmation in your email.</p>
+                                <div class="modal-action flex justify-center">
+                                    <form method="dialog">
+                                        <button class="btn btn-lg btn-wide rounded-3xl font-roboto text-xl font-semibold text-white bg-[#27AE60]">Continue</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </dialog>
                     </div>
                     <div class="pt-6">
                         <ul class="flex justify-center gap-11">
-                            <li class="underline text-base font-normal text-[#03071299]"><a href="">Terms and Conditions</a></li>
-                            <li class="underline text-base font-normal text-[#03071299]"><a href="">Cancellation Policy</a></li>
+                            <li class="underline text-base font-normal text-[#03071299]"><a href="">Terms and
+                                    Conditions</a></li>
+                            <li class="underline text-base font-normal text-[#03071299]"><a href="">Cancellation
+                                    Policy</a></li>
                         </ul>
                     </div>
                 </div>
